--- a/src/PEAKReactBot/thunderstore.toml
+++ b/src/PEAKReactBot/thunderstore.toml
@@ -13,6 +13,7 @@ containsNsfwContent = false
 
 [package.dependencies]
 BepInEx-BepInExPack_PEAK = "5.4.2403"
+loaforc-loaforcsSoundAPI = "2.0.8"
 
 [build]
 icon = "../../icon.png"
